Ensure footer is not covered by hero shade effect

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+footer {
+  z-index: 1;
+}
+
 main > .container {
   padding: 60px 15px 0;
 }
